[package]
name = "standard-collator"
version = "0.9.19"
authors = [ "Digital Native Foundation" ]
build = "build.rs"
edition = "2021"
homepage = "https://standard.tech"
license = "Apache-2.0"
repository = "https://github.com/digitalnativeinc/standard-substrate"
description = "Standard Node Client."

[[bin]]
name = "standard-collator"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[build-dependencies]
substrate-build-script-utils = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }

[features]
# required for dev/local chains
default = [ "rococo-native", "kusama-native" ]
kusama-native = [ "polkadot-service/kusama-native", "polkadot-cli/kusama-native" ]
westend-native = [ "polkadot-service/westend-native", "polkadot-cli/westend-native" ]
rococo-native = [ "polkadot-service/rococo-native", "polkadot-cli/rococo-native" ]
runtime-benchmarks = ["standard-runtime/runtime-benchmarks"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = { version = "1.0" }
clap = { version = "3.1.6", features = ["derive"] }
hex-literal = "0.3.4"
hex = "0.4.3"
lazy_static = "1.4"
log = "0.4.14"
futures = "0.3"

# RPC related Dependencies
jsonrpc-core = "18.0.0"
jsonrpc-pubsub = "18.0.0"

# Local Dependencies
standard-runtime = { path = "../../runtime/standard" }
primitives = { path = "../../primitives" }

# Substrate Dependencies
frame-benchmarking = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
frame-benchmarking-cli = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
pallet-transaction-payment-rpc = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
substrate-frame-rpc-system = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }

## Substrate Client Dependencies
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", features = ["wasmtime"] }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", features = ["wasmtime"] }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sc-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", features = ["wasmtime"] }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
substrate-prometheus-endpoint = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }

## Substrate Primitive Dependencies
sp-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sp-block-builder = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }

# Cumulus dependencies
cumulus-client-consensus-aura = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.19" }
cumulus-client-consensus-common = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.19" }
cumulus-client-collator = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.19" }
cumulus-client-cli = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.19" }
cumulus-client-network = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.19" }
cumulus-client-service = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.19" }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.19" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.19" }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.19" }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.19" }
cumulus-relay-chain-rpc-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.19" }

# Polkadot dependencies
polkadot-cli = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.19" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.19" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.19" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.19" }

# Frontier Dependencies
pallet-dynamic-fee = { version = "4.0.0-dev", default-features = false, git = "https://github.com/digitalnativeinc/frontier", branch = "release-v0.9.19" }
pallet-ethereum = { version = "4.0.0-dev", default-features = false, git = "https://github.com/digitalnativeinc/frontier", branch = "release-v0.9.19" }
pallet-evm = { version = "6.0.0-dev", default-features = false, git = "https://github.com/digitalnativeinc/frontier", branch = "release-v0.9.19" }
fc-db = { version = "2.0.0-dev", default-features = false, git = "https://github.com/digitalnativeinc/frontier", branch = "release-v0.9.19" }
fc-rpc = { version = "2.0.0-dev", default-features = false, git = "https://github.com/digitalnativeinc/frontier", branch = "release-v0.9.19" }
fc-rpc-core = { version = "1.1.0-dev", default-features = false, git = "https://github.com/digitalnativeinc/frontier", branch = "release-v0.9.19" }
fc-mapping-sync = { version = "2.0.0-dev", default-features = false, git = "https://github.com/digitalnativeinc/frontier", branch = "release-v0.9.19" }
fc-consensus = { version = "2.0.0-dev", default-features = false, git = "https://github.com/digitalnativeinc/frontier", branch = "release-v0.9.19" }
fp-rpc = { version = "3.0.0-dev", default-features = false, git = "https://github.com/digitalnativeinc/frontier", branch = "release-v0.9.19" }
fp-storage = { version = "2.0.0", default-features = false, git = "https://github.com/digitalnativeinc/frontier", branch = "release-v0.9.19" }
fp-evm = { version = "3.0.0-dev", default-features = false, git = "https://github.com/digitalnativeinc/frontier", branch = "release-v0.9.19" }
