[package]
authors = ['Standard Tech']
description = 'FRAME Pallet for asset registry management'
edition = '2018'
homepage = 'https://github.com/digitalnativeinc/standard-substrate'
license = 'Unlicense'
name = 'pallet-asset-registry'
repository = 'https://github.com/digitalnativeinc/standard-substrate'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
wasm-builder-runner = {package = 'substrate-wasm-builder-runner', version = '1.0.5'}

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
primitive-types = {default-features = false, version = '0.9.0'}
serde = {features = ['derive'], optional = true, version = '1.0.119'}
primitives = {path = '../../primitives', default-features = false}

frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false, version = '3.0.0' }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false, version = '3.0.0' }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false, version = '3.0.0' }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false, version = '3.0.0' }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false, version = '3.0.0' }

[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false, version = '3.0.0' }


[features]
default = ['std']
std = [
  'serde/std',
  'codec/std',
  'frame-support/std',
  'frame-system/std',
  'sp-runtime/std',
  'sp-core/std',
  'sp-std/std',
  'primitives/std',
]