[package]
authors = ["Standard Tech"]
description = "FRAME Pallet for asset registry management"
edition = "2021"
homepage = "https://github.com/digitalnativeinc/standard-substrate"
license = "Unlicense"
name = "pallet-asset-registry"
repository = "https://github.com/digitalnativeinc/standard-substrate"
version = "4.0.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
wasm-builder-runner = {package = "substrate-wasm-builder-runner", version = "1.0.5"}

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"]}
primitive-types = {default-features = false, version = "0.10.1" }
serde = {features = ["derive"], optional = true, version = "1.0.133" }
primitives = {path = "../../primitives", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false, version = "4.0.0-dev" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false, version = "4.0.0-dev" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false, version = "5.0.0" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false, version = "5.0.0" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false, version = "5.0.0" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false, version = "4.0.0-dev" }

[features]
default = ["std"]
std = [
  "serde/std",
  "codec/std",
  "frame-support/std",
  "frame-system/std",
  "sp-runtime/std",
  "sp-core/std",
  "sp-std/std",
  "primitives/std",
]