[package]
authors = ['Standard Tech']
name = 'pallet-standard-chainbridge'
description = 'FRAME Chainbridge Pallet Implementation'
homepage = 'https://github.com/digitalnativeinc/standard-substrate'
license = 'Unlicense'
version = '3.0.0'
repository = 'https://github.com/digitalnativeinc/standard-substrate'
edition = '2018'

[build-dependencies]
wasm-builder-runner = { version = "2.0.0", package = "substrate-wasm-builder-runner" }

[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8", default-features = false, version = '3.0.0' }

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.119", optional = true, default-features = false }

# primitives
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8", default-features = false, version = "3.0.0" }
# sp-io = { version = "3.0.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8", default-features = false, version = '3.0.0' }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8", default-features = false, version = '3.0.0' }

# frame dependencies
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8", default-features = false, version = '3.0.0' }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8", default-features = false, version = '3.0.0' }

pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8", default_features = false, version = '3.0.0' }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"sp-std/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-core/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
]
