[package]
authors = ['Standard Tech']
name = 'pallet-standard-chainbridge'
description = 'FRAME Chainbridge Pallet Implementation'
homepage = 'https://github.com/digitalnativeinc/standard-substrate'
license = 'Unlicense'
version = '4.0.0-dev'
repository = 'https://github.com/digitalnativeinc/standard-substrate'
edition = '2018'

# [build-dependencies]
# wasm-builder-runner = { version = "2.0.0", package = "substrate-wasm-builder-runner" }

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "2.2", default-features = false, features = ["derive"] }
serde = { version = "1.0.130", optional = true, default-features = false }

# primitives
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9", default-features = false, version = "4.0.0-dev" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9", default-features = false, version = "4.0.0-dev" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9", default-features = false, version = '4.0.0-dev' }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9", default-features = false, version = '4.0.0-dev' }

# frame dependencies
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9", default-features = false, version = '4.0.0-dev' }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9", default-features = false, version = '4.0.0-dev' }

pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9", default_features = false, version = '4.0.0-dev' }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"sp-std/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-core/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
]
