[package]
authors = ["Standard Tech"]
name = "pallet-standard-chainbridge"
description = "FRAME Chainbridge Pallet Implementation"
homepage = "https://github.com/digitalnativeinc/standard-substrate"
license = "Unlicense"
version = "4.0.0-dev"
repository = "https://github.com/digitalnativeinc/standard-substrate"
edition = "2021"

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "3.1.2", default-features = false, features = ["derive"] }
serde = { version = "1.0.139", optional = true, default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

# primitives
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false, version = "4.0.0-dev" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false, version = "6.0.0" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false, version = "6.0.0" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false, version = "6.0.0" }

# frame dependencies
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false, version = "4.0.0-dev" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false, version = "4.0.0-dev" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default_features = false, version = "4.0.0-dev" }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"sp-std/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-core/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
]
