[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'pallet-standard-market'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '4.0.0-dev'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
serde = { version = "1.0.106", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", features = ["derive"], default-features = false }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false, version = '4.0.0-dev' }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false, version = '4.0.0-dev' }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false, version = '4.0.0-dev' }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false, version = '4.0.0-dev' }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default_features = false, version = '4.0.0-dev' }
pallet-asset-registry = { path = "../asset-registry", default-features = false }
primitives = { path = "../../primitives", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false, version = "4.0.0-dev" }

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-core/std',
    'pallet-balances/std',
    'pallet-asset-registry/std',
    'primitives/std',
    'sp-std/std'
]
