[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'pallet-standard-vault'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']


[dependencies]
serde = { version = "1.0.119", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.1", features = ["derive"], default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.6", default-features = false, version = '3.0.0' }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.6", default-features = false, version = '3.0.0' }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.6", default-features = false, version = '3.0.0' }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.6", default-features = false, version = '3.0.0' }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.6", default_features = false, version = '3.0.0' }
pallet-standard-market = { default-features = false, path='../market' }
pallet-standard-oracle = { default_features = false, path = '../oracle'}
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.6", default_features = false, version = '3.0.0'}
orml-currencies = {  path = "../../orml/currencies", default-features = false }
orml-tokens = {  path = "../../orml/tokens", default-features = false }
orml-traits = {  path = "../../orml/traits", default-features = false }
primitives = { path = "../../primitives", default-features = false }
[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.6", default-features = false, version = '3.0.0' }

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-core/std',
    'sp-std/std',
    'pallet-standard-market/std',
    'pallet-standard-oracle/std',
    'pallet-balances/std',
    'orml-currencies/std',
    'orml-tokens/std',
    'orml-traits/std',
    'primitives/std',
]
